# cpp-cross-platform

./: .gitignore  CMakeLists.txt  scratchpad.txt  scratchpad2.txt  spad3.txt  spad4.txt
backup/: Event.h  IRobot.h  RobotFactory.h
include/: EventPublisher.h  EventSubscriber.h  GlobalListener.h  Input.h  MouseImpl.h  Playback.h  RobotFactory.h  RobotImpl.h  Utils.h  WindowsGlobalListener.h  WindowsHookManager.h  WindowsRobotImpl.h
include/MacOSX/: MacGlobalListener.h
include/Win32/: WindowsGlobalListener.h
src/: EventPublisher.cpp  MacGlobalListener.cpp  MacRobotImpl.cpp  Playback.cpp  RecordingManager.cpp  Robot.cpp  RobotSingleton.cpp  WindowsGlobalListener.cpp  WindowsRobotImpl.cpp  main.cpp
